--- a/action.yaml
+++ b/action.yaml
@@ -1,6 +1,5 @@
 
-name: 'Check Existing Tag Action'
-description: 'Call GH API and check if action input tag is present as a valid tag in current repo'
+name: 'Check Existing Tag'
 inputs:
   tag:
     description: 'Tag'
