--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,6 @@
 
 name: 'Check Existing Tag'
+description: This action returns a validation if specifying tag already exists in repository
 inputs:
   tag:
     description: 'Tag'
