--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check Existing Tag
-        uses: ./
+        uses: matheusraz/check-existing-tag-action@v1
         id: check_tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
